lifetimes2/stdout.txt
Checking test execution result...
[!] Test execution result: FAILED
Checking source code format...
  Preparing source code for format check...
  Running format check...
// =====================================================
//  Running cargo fmt...
// =====================================================

// =====================================================
//    Running cargo clippy...
// =====================================================

    Checking format_check v0.1.0 (/home/runner/work/rustlings-zaychyk/rustlings-zaychyk/format_check)
error[E0597]: `string2` does not live long enough
  --> src/lib.rs:24:44
   |
23 |         let string2 = String::from("xyz");
   |             ------- binding `string2` declared here
24 |         result = longest(string1.as_str(), string2.as_str());
   |                                            ^^^^^^^ borrowed value does not live long enough
25 |     }
   |     - `string2` dropped here while still borrowed
26 |     println!("The longest string is '{}'", result);
   |                                            ------ borrow later used here

For more information about this error, try `rustc --explain E0597`.
error: could not compile `format_check` (lib) due to 1 previous error

[!] Source code format check: FAILED
